--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div id="saida">
                 <p>$15</p>
             </div>
-            <button>Converter valor</button>
+            <button id="botaãoDeConfirmação">Converter valor</button>
         </div>
     </main>
     </div>
